src/styles/_catalog.scss
.catalog {
  display: grid;
  grid-template-columns: repeat(1, 200px);
  justify-content: center;
  gap: 48px 48px;

  @media (min-width: 488px) {
    grid-template-columns: repeat(2, 200px);
  }

  @media (min-width: 768px) {
    grid-template-columns: repeat(3, 200px);
  }

  @media (min-width: 1024px) {
    grid-template-columns: repeat(4, 200px);
  }

  &__card {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 200px;
    height: 300px;
    border: 1px solid #ccc;
    border-radius: 5px;
  }
}

